--- a/userinterface/templates/navbar.html
+++ b/userinterface/templates/navbar.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 {% load static %}
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,26 +23,26 @@
     <section class="menu menu3 cid-tsEQosCCDP">
     <ul style="z-index: 1;">
       {% if request.user.is_authenticated %}
-      <li><a href="{%url 'home'%}" class="middle">หน้าแรก</a></li>
+        <li style="height: 4px;"><a href="{%url 'home'%}"><img src="{% static 'images/logo.png' %}" alt="logo" style="height: 3.5rem; "></a></li>
         <li><a href="#news" class="middle">สินค้า</a></li>
         <li><a href="#contact" class="middle">Contact</a></li>
-        <button style="float:right; margin-right: 2%;" class="button"><a href="logout" style="color: white;">logout</a></button>
+        <button style="float:right; margin-right: 2%; width: 5rem;" class="button"><a href="/logout" style="color: white;">logout</a></button>
         <li style="float: right; margin-right: 2%;" class="nav-item"><a class="middle">Hello {{user.username}}!</a></li>
         <li style="float: right; margin-right: 2%;" class="nav-item">
-          <a class="text-black show display-7" href="empty.html">
-              <span class="bi bi-cart3 iconfont iconfont-btn" style="font-size: 30px;""></span>
+          <a class="text-black show display-7" href="{%url 'cart' %}">
+              <span class="bi bi-cart3 iconfont iconfont-btn" style="font-size: 30px;"></span>
           </a>
         </li>
     </ul>
   </section>
       {% else %}
-        <li><a href="{%url 'home'%}" class="middle">หน้าแรก</a></li>
+      <li style="height: 4px;"><a href="{%url 'home'%}"><img src="{% static 'images/logo.png' %}" alt="logo" style="height: 3.5rem; "></a></li>
         <li><a href="#news" class="middle">สินค้า</a></li>
         <li><a href="#contact" class="middle">Contact</a></li>
-        <button style="float:right; margin-right: 2%;" class="button"><a href="login" style="color: white;">login</a></button>
+        <button style="float:right; margin-right: 2%; width: 5rem;" class="button"><a href="login" style="color: white;">login</a></button>
         <li style="float: right; margin-right: 2%;" class="nav-item">
-          <a class="text-black show display-7" href="empty.html">
-              <span class="bi bi-cart3 iconfont iconfont-btn" style="font-size: 30px;""></span>
+          <a class="text-black show display-7" href="{%url 'cart' %}">
+              <span class="bi bi-cart3 iconfont iconfont-btn" style="font-size: 30px;"></span>
           </a>
         </li>
     </ul>
