--- a/userinterface/templates/product_details.html
+++ b/userinterface/templates/product_details.html
@@ -8,7 +8,7 @@
         <div class="row align-items-center mt-4">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <img src="{{product.picture.url}}" style="width: 600px; height: 500px;">
+                    <img src="{{product.picture.url}}" style="width: 500px; height: 400px;">
                 </div>
             </div>
             <div class="col-12 col-lg-6 my-4">
@@ -27,7 +27,7 @@
                     </div>
                     <div class="mbr-section-btn pt-3">
                         <br>
-                        <a href="cart.html" class="btn btn-primary display-4" style="background-color: #a4db74; color: black;">
+                        <a href="{%url 'addcart' product.id %}" class="btn btn-primary display-4" style="background-color: #a4db74; color: black;">
                             <i class="bi bi-cart3"></i></i>&nbsp;
                             หยิบสินค้าลงตะกร้า
                         </a>
