--- a/usersapp/templates/login.html
+++ b/usersapp/templates/login.html
@@ -1,21 +1,21 @@
 {% extends 'navbar.html' %}
 
 {% block title %}หน้าเข้าสู่ระบบ{% endblock %}
-
+{% load static %}
 {% block import %}
 <link rel="stylesheet" href="static/asset/navbar/login.css"> 
 {% endblock %}
 
 {% block content %}
 
-<div class="container border rounded cid-tsJ8wGtENs" style="width: 50%;">
+<div class="container border rounded bg-white py-5" style="width: 50%;">
     <div class="row">
         <div class="col-md-5 mx-auto">
         <div id="first">
             <div class="myform form ">
                  <div class="logo mb-3">
                      <div class="col-md-12 text-center">
-                        <h1>เข้าใช้งานระบบ</h1>
+                        <img src="{%static 'images/logo.png' %}" alt="logo" class="w-75 h-75">
                      </div>
                 </div>
                <form action="{% url 'login'%}" method="post" name="login">
@@ -39,7 +39,7 @@
                           <p class="text-center"><a href="#"></a></p>
                        </div>
                        <div class="col-md-12 text-center ">
-                          <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm rounded-pill" style="background-color: blueviolet;">Login</button>
+                          <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm rounded-pill w-50" style="background-color: blueviolet;">Login</button>
                        </div>
                        
                        <div class="col-md-12 ">
