--- a/usersapp/templates/register.html
+++ b/usersapp/templates/register.html
@@ -8,8 +8,8 @@
 
 {% block content %}
 
-<div class="container border rounded cid-tsJ8wGtENs" style="width: 50%;">
-    <div class="row">
+<div class="container border rounded bg-white my-4" style="width: 50%;">
+    <div class="row my-4">
         <div class="col-md-5 mx-auto">
         <div id="first">
             <div class="myform form ">
@@ -45,7 +45,7 @@
                      </div>
                      <br>
                     <div class="col-md-12 text-center ">
-                        <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm rounded-pill" style="background-color: blueviolet;">ลงทะเบียน</button>
+                        <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm rounded-pill w-50" style="background-color: blueviolet;">ลงทะเบียน</button>
                     </div>
                 </form>
             </div>
