--- a/userinterface/templates/home.html
+++ b/userinterface/templates/home.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row">
     {% for i in product %}
-      <div class="col-sm mb-3">
+      <div class="col-sm-auto my-3" style="margin-right:4rem; ">
         <div class="card" style="width: 18rem; height: 30rem;">
           <a href="{%url 'detail' i.id %}">
             <img class="card-img-top " src="{{i.picture.url}}" alt="product" style="height: 18rem;"></a>
