--- a/usersapp/templates/login.html
+++ b/usersapp/templates/login.html
@@ -8,8 +8,8 @@
 
 {% block content %}
 
-<div class="container border rounded bg-white py-5" style="width: 50%;">
-    <div class="row">
+<div class="container border rounded bg-white py-5 my-5" style="width: 50%;">
+    <div class="row py-3">
         <div class="col-md-5 mx-auto">
         <div id="first">
             <div class="myform form ">
