--- a/usersapp/templates/register.html
+++ b/usersapp/templates/register.html
@@ -8,8 +8,8 @@
 
 {% block content %}
 
-<div class="container border rounded bg-white my-4" style="width: 50%;">
-    <div class="row my-4">
+<div class="container border rounded bg-white py-5 my-4" style="width: 50%;">
+    <div class="row py-4">
         <div class="col-md-5 mx-auto">
         <div id="first">
             <div class="myform form ">
