--- a/user_order/templates/order.html
+++ b/user_order/templates/order.html
@@ -1,7 +1,7 @@
    {% extends 'navbar.html' %} 
    {% block content %} 
     <!-- เนื้อหา (Content) -->
-    <section class="content2 cid-tsEQSCqggh my-5" id="content2-2">
+    <section class="content2 my-5" id="content2-2" style="height: 80vh;">
         <div class="container my-5">
             <div class="mt-1">
                 <!-- Checkout Panel Information-->
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="col-auto mbr-section-btn align-center mt-5">
-                    <button type="submit" class="btn btn-primary" style="background-color: #C7DCA7; color: black; border: black;">สั่งซื้อสินค้า</button>
+                    <button type="submit" class="btn btn-primary">สั่งซื้อสินค้า</button>
                 </div>
                 </form>
             </div>
