--- a/user_order/templates/orderdetails.html
+++ b/user_order/templates/orderdetails.html
@@ -1,11 +1,11 @@
 {% extends 'navbar.html' %}
 {% load humanize %}
 {%block content %}
-    <section class="content2">
-        <div class="container my-5">
+    <section>
+        <div class="container" style="margin-top: 10%;">
             <div class="mbr-section-head">
                 <h4 class="mbr-section-title mbr-fonts-style align-start mb-0 display-2">
-                    <strong>รหัสใบสั่งซื้อ #1</strong>
+                    <strong>รหัสใบสั่งซื้อ #{{order.id}}</strong>
                 </h4>
             </div>
             <div class="row my-5">
