--- a/userinterface/templates/navbar.html
+++ b/userinterface/templates/navbar.html
@@ -10,83 +10,115 @@
       {% endblock %}
     </title>
     <link rel="shortcut icon" href="{%static 'images/logo.png' %}" type="image/x-icon">
-    <link rel="stylesheet" href="{%static 'asset/navbar/navbar.css' %}">
-    <link rel="stylesheet" href="{%static 'asset/navbar/dropdown.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+      ul.nav a:hover { 
+        color: #FFA000 !important;
+      }
+      ul.nav {
+        color:white;
+      }
+      .nav-item{
+        color: white;
+      }
+      body{
+        background-color: #E3F2FD;
+      }
+    </style>
     {% block import %}
     
     {% endblock %}
   </head>
 <body>
 {% if request.user.is_authenticated %}
-<div class="mynav" id="myTopnav">
-  <a href="{%url 'home'%}"><img src="{% static 'images/logo.png' %}" alt="logo" style="height: 3.7rem; margin:2.5px;"></a>
-  <a href="{%url 'home' %}" style="margin-top: 17px;">สินค้า</a>
-  <a href="{%url 'home' %}" style="margin-top: 17px;">ส่งซ่อม</a>
-  <a href="{%url 'contact' %}" style="margin-top: 17px;">ช่องทางการติดต่อ</a>
-  <!-- ขวา -->
-    <div class="mydropdown" style="float:right; margin:10px; margin-right: 5rem;">
-    <button class="bi bi-person-circle iconfont dropbtn" style="font-size: 30px;">
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="mydropdown-content">
-      <a class="text-black show display-7" href="#">
-        ข้อมูลการส่งซ่อม
-      </a>
-      <a class="text-black show display-7" href="{%url 'orderH' %}">
-        ประวัติการซื้อ
-      </a>
-      <a class="text-black show display-7" href="{%url 'logout' %}">
-        ออกจากระบบ
-      </a>
-      
+<header data-bs-theme="dark">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #1E88E5;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/"><img src="{%static 'images/logo.png' %}" alt="logo" style="height: 3.7rem; margin:2.5px;"></a>
+      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0 nav">
+          <li class="nav-item">
+            <a class="nav-link active icon-link-hover" aria-current="page" href="{%url 'home' %}" >สินค้า</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="{%url 'assign_work' %}">ส่งซ่อม</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav nav">
+          <li class="nav-item px-3">
+            <a class="nav-link active" href="{%url 'cart' %}"><i class="bi bi-cart3" style="font-size: 30px;"></i></a>
+          </li>
+          <li class="nav-item dropdown px-3">
+            <a class="nav-link active dropdown-toggle bi bi-person-circle iconfont dropbtn" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 30px;">
+            </a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{%url 'orderH' %}">ประวัติการซื้อ</a></li>
+                <li><a class="dropdown-item" href="{%url 'register' %}">ประวัติการส่งซ่อม</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{%url 'logout' %}">ออกจากระบบ</a></li>
+            </ul>
+          </li>
+      </ul>
+        <form action="{%url 'search_product' %}" class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="ค้นหาสินค้า" aria-label="Search" name="search">
+          <button class="btn btn-outline" type="submit" style="border-color: white; color: white;">Search</button>
+        </form>
+      </div>
     </div>
-  </div> 
-  <a class="text-black show display-7" href="{%url 'cart' %}" style="float: right; margin:10px;">
-    <span class="bi bi-cart3 iconfont iconfont-btn" style="font-size: 30px;"></span>
-  </a>
-    </div>
-  </div> 
-</div>
+  </nav>
+</header>
 
 
 {% else %}
+<header data-bs-theme="dark">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #1E88E5;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/"><img src="{%static 'images/logo.png' %}" alt="logo" style="height: 3.7rem; margin:2.5px;"></a>
+      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0 nav">
+          <li class="nav-item">
+            <a class="nav-link active icon-link-hover" aria-current="page" href="{%url 'home' %}" >สินค้า</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">ส่งซ่อม</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav nav">
+          <li class="nav-item dropdown px-3">
+            <a class="nav-link active dropdown-toggle bi bi-person-circle iconfont dropbtn" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 30px;">
+            </a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{%url 'login' %}">เข้าสู่ระบบ</a></li>
+                <li><a class="dropdown-item" href="{%url 'register' %}">ลงทะเบียนเข้าใช้งาน</a></li>
 
-<div class="mynav" id="myTopnav">
-  <a href="{%url 'home'%}"><img src="{% static 'images/logo.png' %}" alt="logo" style="height: 3.7rem; margin:2.5px;"></a>
-  <a href="{%url 'home' %}" style="margin-top: 17px;">สินค้า</a>
-  <a href="{%url 'home' %}" style="margin-top: 17px;">ส่งซ่อม</a>
-  <a href="{%url 'contact' %}" style="margin-top: 17px;">ช่องทางการติดต่อ</a>
-  <!-- ขวา -->
-    <div class="mydropdown" style="float:right; margin:10px; margin-right: 5rem;">
-    <button class="bi bi-person-circle iconfont dropbtn" style="font-size: 30px;">
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="mydropdown-content">
-      <a class="text-black show display-7" href="{%url 'register' %}">
-        ลงทะเบียน
-      </a>
-      <a class="text-black show display-7" href="{%url 'login' %}">
-        เข้าสู่ระบบ
-      </a>
-      
+            </ul>
+          </li>
+      </ul>
+        <form action="{%url 'search_product' %}" class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="ค้นหาสินค้า" aria-label="Search" name="search">
+          <button class="btn btn-outline" type="submit" style="border-color: white; color: white;">Search</button>
+        </form>
+      </div>
     </div>
-  </div> 
-  <a class="text-black show display-7" href="{%url 'cart' %}" style="float: right; margin:10px;">
-    <span class="bi bi-cart3 iconfont iconfont-btn" style="font-size: 30px;"></span>
-  </a>
-    </div>
-  </div> 
-</div>
+  </nav>
+</header>
+
 {% endif %}
 {% block content %}
 
 
 
 {% endblock %}
-
-
+<footer class="py-3 mt-4" style="background-color: #1E88E5;">
+  <p class="text-center text-white">© 2024 PrasitAutopart</p>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
