--- a/usersapp/templates/login.html
+++ b/usersapp/templates/login.html
@@ -7,62 +7,68 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="container border rounded bg-white py-5 my-5" style="width: 50%;">
-    <div class="row py-3">
-        <div class="col-md-5 mx-auto">
-        <div id="first">
-            <div class="myform form ">
-                 <div class="logo mb-3">
-                     <div class="col-md-12 text-center">
-                        <img src="{%static 'images/logo.png' %}" alt="logo" class="w-75 h-75">
+<section style="width: 100%; height: 100vh;">
+   <div class="d-flex align-items-center justify-content-center" style="height: 100%; width: 100%;">
+      <div class="container border rounded bg-white py-5 my-5 shadow" style="width: 50%;">
+         <div class="row py-3">
+            <div class="col-md-5 mx-auto">
+               <div id="first">
+                     <div class="myform form ">
+                        <div class="logo mb-3">
+                              <div class="col-md-12 text-center">
+                                 <img src="{%static 'images/logo.png' %}" alt="logo" class="w-75 h-75">
+                              </div>
+                        </div>
+                        <form action="{% url 'login'%}" method="post" name="login">
+                           {% csrf_token %}
+                           {% if messages %}
+                                 {% for i in messages %}
+                                 <div class="alert alert-{{i.tags}}" role="alert">
+                                    {{i}}
+                                 </div>
+                                 {% endfor %}
+                                 {% endif %}
+                              <div class="form-group">
+                                 <label for="exampleInputEmail1">ชื่อผู้ใช้</label>
+                                 <input type="text" name="username"  class="form-control" placeholder="กรอกชื่อผู้ใช้">
+                              </div>
+                              <div class="form-group">
+                                 <label for="exampleInputEmail1">รหัสผ่าน</label>
+                                 <input type="password" name="password" class="form-control" placeholder="กรอกรหัสผ่าน">
+                              </div>
+                              <div class="form-group">
+                                 <p class="text-center"><a href="#"></a></p>
+                              </div>
+                              <div class="col-md-12 text-center ">
+                                 <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm rounded-pill w-50" style="background-color: #64B5F6;">เข้าสู่ระบบ</button>
+                              </div>
+                              
+                              <div class="col-md-12 ">
+                                 <div class="login-or">
+                                    <hr class="hr-or"><!--  gmail
+                                    <span class="span-or">or</span>
+                                 </div>
+                                 </div>
+                                 
+                              <div class="col-md-12 mb-3">
+                                 <p class="text-center">
+                                    <a href="javascript:void();" class="google btn mybtn"><i class="fa fa-google-plus">
+                                    </i> เข้าสู่ระบบด้วย gmail
+                                    </a>
+                                 </p>
+                              </div>
+                                 !-->
+                              <div class="form-group">
+                                 <p class="text-center">ยังไม่ได้ลงทะเบียน ? <a href="{%url 'register' %}">ลงได้เลย</a></p>
+                              </div>
+                           </form>
                      </div>
-                </div>
-               <form action="{% url 'login'%}" method="post" name="login">
-                  {% csrf_token %}
-                  {% if messages %}
-                        {% for i in messages %}
-                        <div class="alert alert-{{i.tags}}" role="alert">
-                            {{i}}
-                        </div>
-                        {% endfor %}
-                        {% endif %}
-                       <div class="form-group">
-                          <label for="exampleInputEmail1">Username</label>
-                          <input type="text" name="username"  class="form-control" placeholder="Username">
-                       </div>
-                       <div class="form-group">
-                          <label for="exampleInputEmail1">Password</label>
-                          <input type="password" name="password" class="form-control" placeholder="Enter Password">
-                       </div>
-                       <div class="form-group">
-                          <p class="text-center"><a href="#"></a></p>
-                       </div>
-                       <div class="col-md-12 text-center ">
-                          <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm rounded-pill w-50" style="background-color: blueviolet;">Login</button>
-                       </div>
-                       
-                       <div class="col-md-12 ">
-                          <div class="login-or">
-                             <hr class="hr-or"><!--  gmail
-                             <span class="span-or">or</span>
-                          </div>
-                        </div>
-                        
-                       <div class="col-md-12 mb-3">
-                          <p class="text-center">
-                             <a href="javascript:void();" class="google btn mybtn"><i class="fa fa-google-plus">
-                             </i> เข้าสู่ระบบด้วย gmail
-                             </a>
-                          </p>
-                       </div>
-                        !-->
-                       <div class="form-group">
-                          <p class="text-center">ยังไม่ได้ลงทะเบียน ? <a href="{%url 'register' %}">ลงได้เลย</a></p>
-                       </div>
-                    </form>
+               </div>
             </div>
-        </div>
-    </div>
-  </div>   
+         </div>
+      </div>
+   </div>
+</section>
+
+
 {% endblock %}
