--- a/usersapp/templates/register.html
+++ b/usersapp/templates/register.html
@@ -7,49 +7,51 @@
 {% endblock %}
 
 {% block content %}
-
-<div class="container border rounded bg-white py-5 my-4" style="width: 50%;">
-    <div class="row py-4">
-        <div class="col-md-5 mx-auto">
-        <div id="first">
-            <div class="myform form ">
-                 <div class="logo mb-3">
-                     <div class="col-md-12 text-center">
-                        <h1>สร้างบัญชีผู้ใช้</h1>
-                     </div>
-                </div>
-                <form action="{% url 'register' %}" method="post">
-                {% csrf_token %}
-                        {% if messages %}
-                        {% for i in messages %}
-                        <div class="alert alert-{{i.tags}}" role="alert">
-                            {{i}}
+<section style="width: 100%; height: 100vh;">
+    <div class="d-flex align-items-center justify-content-center" style="height: 100%; width: 100%;">
+        <div class="container border rounded bg-white py-5 my-4 shadow" style="width: 50%;">
+            <div class="row py-4">
+                <div class="col-md-5 mx-auto">
+                    <div class="myform form ">
+                        <div class="logo mb-3">
+                            <div class="col-md-12 text-center">
+                                <h1>สร้างบัญชีผู้ใช้</h1>
+                            </div>
                         </div>
-                        {% endfor %}
-                        {% endif %}
-                       <div class="form-group">
-                          <label for="exampleInputEmail1">Username</label>
-                          <input type="text" name="username"  class="form-control" aria-describedby="emailHelp" placeholder="Enter email">
-                       </div>
-                       <div class="form-group">
-                          <label for="exampleInputEmail1">Email</label>
-                          <input type="email" name="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter Email">
-                       </div>
-                       <div class="form-group">
-                        <label for="exampleInputEmail1">Password</label>
-                        <input type="password" name="password" class="form-control" aria-describedby="emailHelp" placeholder="Enter Password">
-                     </div>
-                     <div class="form-group">
-                        <label for="exampleInputEmail1">Password</label>
-                        <input type="password" name="password2" class="form-control" aria-describedby="emailHelp" placeholder="Enter Password">
-                     </div>
-                     <br>
-                    <div class="col-md-12 text-center ">
-                        <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm rounded-pill w-50" style="background-color: blueviolet;">ลงทะเบียน</button>
+                        <form action="{% url 'register' %}" method="post">
+                        {% csrf_token %}
+                                {% if messages %}
+                                {% for i in messages %}
+                                <div class="alert alert-{{i.tags}}" role="alert">
+                                    {{i}}
+                                </div>
+                                {% endfor %}
+                                {% endif %}
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">ชื่อผู้ใช้</label>
+                                <input type="text" name="username"  class="form-control" aria-describedby="emailHelp" placeholder="กรอกชื่อผู้ใช้">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">อีเมล</label>
+                                <input type="email" name="email" class="form-control" aria-describedby="emailHelp" placeholder="กรอกอีเมล">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">รหัสผ่าน</label>
+                                <input type="password" name="password" class="form-control" aria-describedby="emailHelp" placeholder="กรอกรหัสผ่าน">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">ยืนยันรหัสผ่าน</label>
+                                <input type="password" name="password2" class="form-control" aria-describedby="emailHelp" placeholder="ยืนยันรหัสผ่าน">
+                            </div>
+                            <br>
+                            <div class="col-md-12 text-center ">
+                                <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm rounded-pill w-50" style="background-color: #64B5F6;">ลงทะเบียน</button>
+                            </div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-  </div>   
+</section>
 {% endblock %}
