--- a/worker_app/templates/assign.html
+++ b/worker_app/templates/assign.html
@@ -1,6 +1,51 @@
 {% extends 'navbar.html' %}
+{% load static %}
 
 {% block content %}
-
+<section style="height: 100vh;">
+    <div class="container-sm w-100 h-100 py-5">
+      <div class="d-flex justify-content-center">
+        <h2>กรอกข้อมูลอะไหล่ที่จะซ่อม</h2>
+      </div>
+          <div class="d-flex justify-content-center">
+              <form class="row g-3" method="POST" action="{%url 'assign_work' %}">
+                {% csrf_token %}
+                  <div class="d-flex justify-content-center my-3 py-3">
+                    <div class="btn-group gap-5" role="group" aria-label="Basic radio toggle button group">
+                      <input type="radio" value="เกียร์" class="btn-check" name="carpart" id="btnradio1" autocomplete="off" checked>
+                      <label class="btn btn-outline-dark rounded-1" for="btnradio1" style="width: 14rem;">
+                        <img src="{%static 'images/gear.gif' %}" alt="เกียร์" style="width: 100%; height: 100%;">
+                      </label>
+                      <input type="radio" value="เครื่องยนต์" class="btn-check" name="carpart" id="btnradio2" autocomplete="off">
+                      <label class="btn btn-outline-dark rounded-1 " for="btnradio2" style="width: 14rem;">
+                        <img src="{%static 'images/car-engine.png' %}" alt="เครื่องยนต์" style="width: 100%; height: 100%;">
+                      </label>
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <label for="firstname" class="form-label">ชื่อ</label>
+                    <input type="text" class="form-control" name="firstname" id="firstname">
+                  </div>
+                  <div class="col-md-12">
+                    <label for="lastname" class="form-label">นามสกุล</label>
+                    <input type="text" class="form-control" name="lastname" id="lastname">
+                  </div>
+                  <div>
+                    <label for="form-select" class="form-label">ยี่ห้อ</label>
+                    <select class="form-select" aria-label="Default select example" name="car_brand">
+                      <option selected>เลือกยี่ห้อ</option>
+                      <option value="อีซูซุ">อีซูซุ</option>
+                      <option value="โตโยต้า">โตโยต้า</option>
+                      <option value="มิตซู">มิตซู</option>
+                    </select>
+                  </div>
+                  <div class="col-12 py-3">
+                    <button type="submit" class="btn btn-primary">ยืนยัน</button>
+                  </div>
+                </form>
+          </div>
+      </div>
+  </div>
+</section>
 
 {% endblock %}
