--- a/admin_app/templates/create_product.html
+++ b/admin_app/templates/create_product.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="my-5 px-5 container text-center" style="width: 100%;">
-  <div class="row py-5 px-5 rounded shadow" style="background-color: #C0C0C0;">
+  <div class="row py-5 px-5 rounded shadow bg-light" >
       <h1 >เพิ่มข้อมูลสินค้า</h1>
       <div class="mt-5">
         <form class="row g-3 text-start" method="POST" enctype="multipart/form-data">
