--- a/admin_app/templates/sidebar.html
+++ b/admin_app/templates/sidebar.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="{%static 'images/logo.png' %}" type="image/x-icon">
+    <style>
+      body{
+        background-color: #E3F2FD;
+      }
+    </style>
     {% block import %}
 
     {% endblock %}
@@ -64,12 +69,21 @@
               </a>
             </li>
             {% endif %}
+            {% if users != none %}
+            <li>
+              <a href="{%url 'manage_user' %}" class="nav-link active">
+                <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
+                จัดการผู้ใช้
+              </a>
+            </li>
+            {% else %}
             <li>
               <a href="{%url 'manage_user' %}" class="nav-link text-white">
                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
                 จัดการผู้ใช้
               </a>
             </li>
+            {% endif %}
             <li>
               <a href="#" class="nav-link text-white">
                 <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
